// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal disappears correctly after dismissing 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        Object {
          "alignSelf": "flex-start",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 16,
                "borderWidth": 1,
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 16,
                "borderWidth": 1,
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
  </View>
</Modal>
`;

exports[`ConfirmModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        Object {
          "alignSelf": "flex-start",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 16,
                "borderWidth": 1,
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 16,
                "borderWidth": 1,
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
  </View>
</Modal>
`;

exports[`ConfirmModal renders correctly with text input 1`] = `
<Modal
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 10,
        "borderWidth": 1,
        "margin": "auto",
        "width": 550,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-start",
            "fontSize": 20,
            "fontWeight": "bold",
            "lineHeight": 26,
            "marginHorizontal": 10,
            "padding": 20,
            "paddingLeft": 10,
            "textAlign": "center",
          }
        }
      >
        Title
      </Text>
    </View>
    <Text
      style={
        Object {
          "alignSelf": "flex-start",
          "fontSize": 20,
          "lineHeight": 26,
          "marginHorizontal": 10,
          "padding": 20,
          "paddingLeft": 10,
          "textAlign": "left",
        }
      }
    >
      Description
    </Text>
    <TextInput
      defaultValue=""
      onChangeText={[Function]}
      placeholder=""
      selectTextOnFocus={true}
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#000",
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "marginVertical": 32,
          "padding": 8,
          "textAlign": "left",
        }
      }
    />
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
          "paddingBottom": 20,
        }
      }
    >
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 16,
                "borderWidth": 1,
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#3742fa",
                "borderColor": "#3742fa",
                "borderRadius": 16,
                "borderWidth": 1,
                "padding": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
  </View>
</Modal>
`;
